--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:100" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vast+Shadow" rel="stylesheet">
   <title>Színes óra</title>
 <style id="jsbin-css">
 * { margin: 0; padding: 0; }
